--- a/index.html
+++ b/index.html
@@ -1,31 +1,36 @@
 <?xml version="1.0" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+		"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<title>Ferienwohnung "Unter Eichen" in Lingen</title>
-	<link rel="stylesheet" type="text/css" href="stylesheet.css" />
-	<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
-	<meta http-equiv="Content-Style-Type" content="text/css" />
-	<meta http-equiv="Content-Script-Type" content="text/javascript" />
+	<link rel="stylesheet" type="text/css" href="reset-min.css"/>
+	<link rel="stylesheet" type="text/css" href="stylesheet.css"/>
+	<meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
+	<meta http-equiv="Content-Style-Type" content="text/css"/>
+	<meta http-equiv="Content-Script-Type" content="text/javascript"/>
 </head>
 <body>
-	<h1 id="title">Ferienwohnung &#34;Unter Eichen&#34; &#9733;&#9733;&#9733;</h1>
-	<div id="menu">
-		<a href="javascript:null()">UNSERE RÄUME</a>
-		<a href="javascript:null()">Über Lingen</a>
-		<a href="javascript:null()">Anfahrt</a>
-		<a href="javascript:null()">Preise</a>
-		<a href="javascript:null()">KONTAKT</a>
-	</div>
-	<div id="container">
+<h1 id="title"><a href="/">Ferienwohnung &#34;Unter Eichen&#34; &#9733;&#9733;&#9733;</a></h1>
+
+<div id="menu">
+	<a href="javascript:">UNSERE RÄUME</a>
+	<a href="javascript:">Über Lingen</a>
+	<a href="javascript:">Anfahrt</a>
+	<a href="javascript:">Preise</a>
+	<a href="javascript:">KONTAKT</a>
+</div>
+<div id="container">
+	<div id="inner_container">
 		<div id="description">
-			<img src="http://fewo-unter-eichen.de/eingang.jpg" alt="" />
+			<img src="http://fewo-unter-eichen.de/eingang.jpg" alt=""/>
 			<span>Gelegen in einer ruhigen Wohnsiedlung, knapp 2 km vom Stadtzentrum entfernt, befindet sich in einem seperaten Anbau einer restaurierten Hofstelle mit altem Baumbestand und großzügiger Gartenanlage die Ferienwohnung "Unter Eichen"</span>
 		</div>
 		<div id="content">
 			<h1>"Unter Eichen"</h1>
+
 			<p><b>Ihr Feriendomizil</b> oder <b>Ihr Wohnort</b> für Ihren Business-Aufenthalt.</p>
+
 			<p>
 				Die Alternative zum Hotel:
 			</p>
@@ -40,10 +45,12 @@
 			<ul>
 				<li>eine helle, renovierte, geräumige Wohnung mit individuellem Flair</li>
 				<li>ein abgegrenzter Gartenteil mit Laube, Strandkorb und Grill</li>
-				<li>eine hochwertige Einbauküche mit Essecke, Geschirrspüler, Herd, Toaster, Mikrowelle und Kinderhochstuhl</li>
+				<li>eine hochwertige Einbauküche mit Essecke, Geschirrspüler, Herd, Toaster, Mikrowelle und Kinderhochstuhl
+				</li>
 			</ul>
 			<p><b>Sie sind herzlich willkommen!</b></p>
 		</div>
 	</div>
+</div>
 </body>
 </html>
