Große Umstellungen im Template (Texte, Menüposition)

--- a/index.html
+++ b/index.html
@@ -13,18 +13,19 @@
 <body>
 <h1 id="title"><a href="/">Ferienwohnung &#34;Unter Eichen&#34; &#9733;&#9733;&#9733;</a></h1>
 
-<div id="menu">
-	<a href="javascript:">UNSERE RÄUME</a>
-	<a href="javascript:">Über Lingen</a>
-	<a href="javascript:">Anfahrt</a>
-	<a href="javascript:">Preise</a>
-	<a href="javascript:">KONTAKT</a>
-</div>
 <div id="container">
+	<div id="description">
+		<img src="http://fewo-unter-eichen.de/eingang.jpg" alt=""/>
+		<span>Gelegen in einer ruhigen Wohnsiedlung, knapp 2 km vom Stadtzentrum entfernt, befindet sich in einem seperaten Anbau einer restaurierten Hofstelle mit altem Baumbestand und großzügiger Gartenanlage die Ferienwohnung "Unter Eichen"</span>
+	</div>
 	<div id="inner_container">
-		<div id="description">
-			<img src="http://fewo-unter-eichen.de/eingang.jpg" alt=""/>
-			<span>Gelegen in einer ruhigen Wohnsiedlung, knapp 2 km vom Stadtzentrum entfernt, befindet sich in einem seperaten Anbau einer restaurierten Hofstelle mit altem Baumbestand und großzügiger Gartenanlage die Ferienwohnung "Unter Eichen"</span>
+		<div id="menu">
+			<a href="javascript:">Start</a>
+			<a href="javascript:" class="active">Unsere Räume</a>
+			<a href="javascript:">Über Lingen</a>
+			<a href="javascript:">Anfahrt</a>
+			<a href="javascript:">Preise</a>
+			<a href="javascript:">Kontakt</a>
 		</div>
 		<div id="content">
 			<h1>"Unter Eichen"</h1>
