--- a/index.html
+++ b/index.html
@@ -28,28 +28,32 @@
 			<a href="javascript:">Kontakt</a>
 		</div>
 		<div id="content">
-			<h1>"Unter Eichen"</h1>
-
-			<p><b>Ihr Feriendomizil</b> oder <b>Ihr Wohnort</b> für Ihren Business-Aufenthalt.</p>
-
-			<p>
-				Die Alternative zum Hotel:
-			</p>
-			<ul>
-				<li>für eine Nacht, eine Woche, einen Monat, individuell planbar...</li>
-				<li>Nichtraucherwohnung</li>
-				<li>für 2 Erwachsene (und 2 Kinder)</li>
-			</ul>
-			<p>
-				Es erwartet sie:
-			</p>
-			<ul>
-				<li>eine helle, renovierte, geräumige Wohnung mit individuellem Flair</li>
-				<li>ein abgegrenzter Gartenteil mit Laube, Strandkorb und Grill</li>
-				<li>eine hochwertige Einbauküche mit Essecke, Geschirrspüler, Herd, Toaster, Mikrowelle und Kinderhochstuhl
-				</li>
-			</ul>
-			<p><b>Sie sind herzlich willkommen!</b></p>
+			<div id="c4" class="csc-default">
+				<div class="csc-header csc-header-n1"><h1 class="csc-firstHeader">&quot;Unter Eichen&quot;</h1></div>
+				<p class="bodytext">
+					<b>Ihr Feriendomizil</b> oder <b>Ihr Wohnort</b> für Ihren Business-Aufenthalt.
+					<br/>
+					<br/>
+					Die Alternative zum Hotel:
+				</p>
+				<ul>
+					<li>für eine Nacht, eine Woche, einen Monat, individuell planbar...</li>
+					<li>Nichtraucherwohnung</li>
+					<li>für 2 Erwachsene (und 2 Kinder)</li>
+				</ul>
+				<p class="bodytext">
+					<br/>
+					Es erwartet sie:
+				</p>
+				<ul>
+					<li>eine helle, renovierte, geräumige Wohnung mit individuellem Flair</li>
+					<li>ein abgegrenzter Gartenteil mit Laube, Strandkorb und Grill</li>
+					<li>eine hochwertige Einbauküche mit Essecke, Geschirrspüler, Herd, Toaster, Mikrowelle und
+						Kinderhochstuhl
+					</li>
+				</ul>
+				<p class="bodytext"><br/><b>Sie sind herzlich willkommen! </b></p>
+			</div>
 		</div>
 	</div>
 </div>
