Haufenweise Änderungen zum fertigen Typo3-Template

--- a/index.html
+++ b/index.html
@@ -1,22 +1,51 @@
-<?xml version="1.0" ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-		"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!doctype html>
+<html lang="de">
 <head>
+	<!-- Zeug das vom Typo3 gemacht wird -->
+	<meta charset="utf-8" />
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<title>Ferienwohnung "Unter Eichen" in Lingen</title>
-	<link rel="stylesheet" type="text/css" href="reset-min.css"/>
-	<link rel="stylesheet" type="text/css" href="stylesheet.css"/>
-	<meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
-	<meta http-equiv="Content-Style-Type" content="text/css"/>
-	<meta http-equiv="Content-Script-Type" content="text/javascript"/>
+
+	<!-- Stylesheet -->
+	<link rel="stylesheet" type="text/css" href="reset-min.css" />
+	<link rel="stylesheet" type="text/css" href="stylesheet.css" />
+
+	<!-- Allgemeiner Kram -->
+	<meta name="viewport" content="width=device-width,initial-scale=1">
+	<meta http-equiv="Content-Style-Type" content="text/css" />
+	<meta http-equiv="Content-Script-Type" content="text/javascript" />
+
+	<!-- Icons -->
+	<link rel="icon" href="images/favicon.ico" type="image/x-icon">
+	<link rel="apple-touch-icon" href="touch-icon-iphone.png" />
+	<link rel="apple-touch-icon" sizes="72x72" href="touch-icon-ipad.png" />
+	<link rel="apple-touch-icon" sizes="114x114" href="touch-icon-iphone4.png" />
+
+	<!-- OpenGraph -->
+	<meta property="og:title" content="Ferienwohnung &quot;Unter Eichen&quot;"/>
+	<meta property="og:type" content="hotel"/>
+	<meta property="og:url" content="http://fewo-unter-eichen.de/"/>
+	<meta property="og:image" content="http://fewo-unter-eichen.de/start/fileadmin/templates/images/eingang.jpg"/>
+	<meta property="fb:admins" content="1010676648" />
+	<meta property="og:description" content="Gelegen in einer ruhigen Wohnsiedlung, knapp 2 km vom Stadtzentrum entfernt, befindet sich in einem seperaten Anbau einer restaurierten Hofstelle mit altem Baumbestand und großzügiger Gartenanlage die Ferienwohnung &quot;Unter Eichen&quot;"/>
+	<meta property="og:latitude" content="52.518832"/>
+	<meta property="og:longitude" content="7.337204"/>
+	<meta property="og:street-address" content="Am Strootbach 7a"/>
+	<meta property="og:locality" content="Lingen"/>
+	<meta property="og:postal-code" content="49809"/>
+	<meta property="og:country-name" content="Germany"/>
+	<meta property="og:email" content="kontakt@fewo-unter-eichen.de"/>
+	<meta property="og:locale" content="de_DE"/>
 </head>
 <body>
+
 <h1 id="title"><a href="/">Ferienwohnung &#34;Unter Eichen&#34; &#9733;&#9733;&#9733;</a></h1>
 
 <div id="container">
 	<div id="description">
-		<img src="http://fewo-unter-eichen.de/eingang.jpg" alt=""/>
+		<img src="images/eingang.jpg" alt=""/>
 		<span>Gelegen in einer ruhigen Wohnsiedlung, knapp 2 km vom Stadtzentrum entfernt, befindet sich in einem seperaten Anbau einer restaurierten Hofstelle mit altem Baumbestand und großzügiger Gartenanlage die Ferienwohnung "Unter Eichen"</span>
+		<div class="fb-like" data-href="http://fewo-unter-eichen.de/" data-send="true" data-layout="button_count" data-width="200" data-show-faces="true" data-font="lucida grande"></div>
 	</div>
 	<div id="inner_container">
 		<div id="menu">
@@ -28,34 +57,33 @@
 			<a href="javascript:">Kontakt</a>
 		</div>
 		<div id="content">
-			<div id="c4" class="csc-default">
-				<div class="csc-header csc-header-n1"><h1 class="csc-firstHeader">&quot;Unter Eichen&quot;</h1></div>
-				<p class="bodytext">
-					<b>Ihr Feriendomizil</b> oder <b>Ihr Wohnort</b> für Ihren Business-Aufenthalt.
-					<br/>
-					<br/>
-					Die Alternative zum Hotel:
-				</p>
-				<ul>
-					<li>für eine Nacht, eine Woche, einen Monat, individuell planbar...</li>
-					<li>Nichtraucherwohnung</li>
-					<li>für 2 Erwachsene (und 2 Kinder)</li>
-				</ul>
-				<p class="bodytext">
-					<br/>
-					Es erwartet sie:
-				</p>
-				<ul>
-					<li>eine helle, renovierte, geräumige Wohnung mit individuellem Flair</li>
-					<li>ein abgegrenzter Gartenteil mit Laube, Strandkorb und Grill</li>
-					<li>eine hochwertige Einbauküche mit Essecke, Geschirrspüler, Herd, Toaster, Mikrowelle und
-						Kinderhochstuhl
-					</li>
-				</ul>
-				<p class="bodytext"><br/><b>Sie sind herzlich willkommen! </b></p>
-			</div>
+			[[*content]]
 		</div>
 	</div>
+	<div style="clear: both;">&nbsp;</div>
 </div>
+
+<!-- Piwik --> 
+<script type="text/javascript">
+var pkBaseURL = (("https:" == document.location.protocol) ? "https://piwik.olle-orks.org/" : "http://piwik.olle-orks.org/");
+document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script type="text/javascript">
+try {
+var piwikTracker = Piwik.getTracker(pkBaseURL + "piwik.php", 5);
+piwikTracker.trackPageView();
+piwikTracker.enableLinkTracking();
+} catch( err ) {}
+</script><noscript><p><img src="http://piwik.olle-orks.org/piwik.php?idsite=5" style="border:0" alt="" /></p></noscript>
+<!-- End Piwik Tracking Code -->
+
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/de_DE/all.js#xfbml=1";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
 </body>
 </html>
