Aktuelle online-Version

--- a/index.html
+++ b/index.html
@@ -7,45 +7,40 @@
 	<title>Ferienwohnung "Unter Eichen" in Lingen</title>
 
 	<!-- Stylesheet -->
-	<link rel="stylesheet" type="text/css" href="reset-min.css" />
-	<link rel="stylesheet" type="text/css" href="stylesheet.css" />
+	<link rel="stylesheet" href="reset-min.css" />
+	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.4/jquery.fancybox.css" />
+	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.4/helpers/jquery.fancybox-buttons.css" />
+	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.4/helpers/jquery.fancybox-thumbs.css" />
+	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Gudea:700|Open+Sans|Libre+Baskerville:700">
+	<link rel="stylesheet" href="stylesheet.css" />
+
+	<!-- JavaScript -->
+	<script src="//cdnjs.cloudflare.com/ajax/libs/headjs/0.99/head.min.js"></script>
 
 	<!-- Allgemeiner Kram -->
-	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<meta http-equiv="Content-Style-Type" content="text/css" />
-	<meta http-equiv="Content-Script-Type" content="text/javascript" />
+	<meta name="viewport" content="width=745">
+	<meta http-equiv="X-UA-Compatible" content="IE=10" />
+	<meta http-equiv="content-language" content="de-de">
+	<meta name="description" content="Gelegen in einer ruhigen Wohnsiedlung, knapp 2 km vom Stadtzentrum Lingen entfernt">
 
 	<!-- Icons -->
 	<link rel="icon" href="images/favicon.ico" type="image/x-icon">
-	<link rel="apple-touch-icon" href="touch-icon-iphone.png" />
-	<link rel="apple-touch-icon" sizes="72x72" href="touch-icon-ipad.png" />
-	<link rel="apple-touch-icon" sizes="114x114" href="touch-icon-iphone4.png" />
 
 	<!-- OpenGraph -->
 	<meta property="og:title" content="Ferienwohnung &quot;Unter Eichen&quot;"/>
 	<meta property="og:type" content="hotel"/>
-	<meta property="og:url" content="http://fewo-unter-eichen.de/"/>
-	<meta property="og:image" content="http://fewo-unter-eichen.de/start/fileadmin/templates/images/eingang.jpg"/>
-	<meta property="fb:admins" content="1010676648" />
+	<meta property="og:url" content="http://fewo-unter-eichen.de/start/"/>
+	<meta property="og:image" content="http://fewo-unter-eichen.de/fileadmin/templates/images/eingang.jpg"/>
 	<meta property="og:description" content="Gelegen in einer ruhigen Wohnsiedlung, knapp 2 km vom Stadtzentrum entfernt, befindet sich in einem seperaten Anbau einer restaurierten Hofstelle mit altem Baumbestand und großzügiger Gartenanlage die Ferienwohnung &quot;Unter Eichen&quot;"/>
-	<meta property="og:latitude" content="52.518832"/>
-	<meta property="og:longitude" content="7.337204"/>
-	<meta property="og:street-address" content="Am Strootbach 7a"/>
-	<meta property="og:locality" content="Lingen"/>
-	<meta property="og:postal-code" content="49809"/>
-	<meta property="og:country-name" content="Germany"/>
-	<meta property="og:email" content="kontakt@fewo-unter-eichen.de"/>
-	<meta property="og:locale" content="de_DE"/>
 </head>
 <body>
 
-<h1 id="title"><a href="/">Ferienwohnung &#34;Unter Eichen&#34; &#9733;&#9733;&#9733;</a></h1>
+<h1 id="title"><a href="/">Ferienwohnung &#34;Unter Eichen&#34; in Lingen &#9733;&#9733;&#9733;</a></h1>
 
 <div id="container">
 	<div id="description">
-		<img src="images/eingang.jpg" alt=""/>
-		<span>Gelegen in einer ruhigen Wohnsiedlung, knapp 2 km vom Stadtzentrum entfernt, befindet sich in einem seperaten Anbau einer restaurierten Hofstelle mit altem Baumbestand und großzügiger Gartenanlage die Ferienwohnung "Unter Eichen"</span>
-		<div class="fb-like" data-href="http://fewo-unter-eichen.de/" data-send="true" data-layout="button_count" data-width="200" data-show-faces="true" data-font="lucida grande"></div>
+		<img src="images/eingang.jpg" alt="" width="230px" height="172px">
+		<span>Gelegen in einer ruhigen Wohnsiedlung, knapp 2 km vom Stadtzentrum Lingen entfernt, befindet sich in einem seperaten Anbau einer restaurierten Hofstelle mit altem Baumbestand und großzügiger Gartenanlage die Ferienwohnung "Unter Eichen"</span>
 	</div>
 	<div id="inner_container">
 		<div id="menu">
@@ -63,27 +58,45 @@
 	<div style="clear: both;">&nbsp;</div>
 </div>
 
-<!-- Piwik --> 
-<script type="text/javascript">
-var pkBaseURL = (("https:" == document.location.protocol) ? "https://piwik.olle-orks.org/" : "http://piwik.olle-orks.org/");
-document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
-</script><script type="text/javascript">
-try {
-var piwikTracker = Piwik.getTracker(pkBaseURL + "piwik.php", 5);
-piwikTracker.trackPageView();
-piwikTracker.enableLinkTracking();
-} catch( err ) {}
-</script><noscript><p><img src="http://piwik.olle-orks.org/piwik.php?idsite=5" style="border:0" alt="" /></p></noscript>
-<!-- End Piwik Tracking Code -->
+<script>
+	var _gaq = _gaq || [];
+	_gaq.push(['_setAccount', 'UA-36080374-1']);
+	_gaq.push(['_gat._anonymizeIp']);
+	_gaq.push(['_trackPageview']);
 
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/de_DE/all.js#xfbml=1";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
+	head.ready('piwik', function() {
+		try {
+			var piwikTracker = Piwik.getTracker("//piwik.olle-orks.org/piwik.php", 5);
+			piwikTracker.trackPageView();
+			piwikTracker.enableLinkTracking();
+		} catch( err ) {}
+	});
 
+	head.js(
+		"//google-analytics.com/ga.js",
+		{piwik: "//piwik.olle-orks.org/piwik.js"}
+	);
+
+	if (window.location.href.match(/\/studio\//))
+	{
+		head.js(
+			"//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.0/jquery.min.js",
+			"//cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.4/jquery.fancybox.pack.js",
+			"//cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.4/helpers/jquery.fancybox-buttons.js",
+			"//cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.4/helpers/jquery.fancybox-thumbs.js",
+			function() {
+				$(".fancybox").fancybox({
+					helpers: {
+						thumbs: {
+							width: 50,
+							height: 50
+						},
+						buttons: {}
+					}
+				});
+			}
+		);
+	}
+</script>
 </body>
 </html>
