--- a/index.html
+++ b/index.html
@@ -51,7 +51,19 @@
 				<a href="javascript:">Kontakt</a>
 			</div>
 			<div id="content">
-				[[*content]]
+				<h2>Lorem ipsum</h2>
+				<p><strong>Lorem ipsum</strong> dolor sit amet, consectetur adipiscing elit. Aenean at lacinia tellus. Morbi congue leo sem, id ultrices odio aliquam sed. Fusce tincidunt elit quis consectetur fermentum. Nunc eu sagittis nisl. Vivamus nec diam in urna commodo rhoncus. Nulla lectus ligula, aliquam pharetra sodales ut, vulputate nec ligula. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec aliquam pretium tellus, nec pellentesque ipsum tempus eget. Fusce tincidunt tortor et metus ultrices tempor. Sed aliquam nunc vitae dignissim sollicitudin. Suspendisse at velit eu velit mollis auctor sed eget risus.</p>
+				<h3>Donec et semper enim</h3>
+				<p><a href="https://www.google.de/">Donec et semper enim.</a> Vivamus pretium convallis velit eu laoreet. Nam dictum, turpis et dapibus rutrum, sem justo dignissim ante, sit amet eleifend risus tellus id neque. Nunc urna elit, tincidunt eget quam eget, gravida tristique dolor. Suspendisse suscipit mi vel molestie laoreet. Mauris nunc quam, mattis eget nisl at, posuere accumsan felis. Phasellus dui orci, interdum quis diam non, pretium imperdiet orci.</p>
+				<h4>Etiam fermentum libero</h4>
+				<ul>
+					<li>Etiam fermentum libero id odio sollicitudin suscipit.</li>
+					<li>Phasellus ac tortor placerat, adipiscing erat vel, rhoncus turpis.</li>
+					<li>In eget nulla fermentum purus lobortis aliquam.</li>
+					<li>Maecenas vel tortor dapibus, rhoncus nunc vitae, lacinia lorem.</li>
+					<li>Quisque tristique metus in eleifend pellentesque.</li>
+					<li>Proin nec augue sed nisl imperdiet bibendum.</li>
+				</ul>
 			</div>
 		</div>
 		<div style="clear: both;">&nbsp;</div>
