--- a/index.html
+++ b/index.html
@@ -2,24 +2,23 @@
 <html lang="de">
 <head>
 	<!-- Zeug das vom Typo3 gemacht wird -->
-	<meta charset="utf-8" />
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<meta charset="utf-8">
 	<title>Ferienwohnung "Unter Eichen" in Lingen</title>
 
 	<!-- Stylesheet -->
-	<link rel="stylesheet" href="reset-min.css" />
-	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.4/jquery.fancybox.css" />
-	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.4/helpers/jquery.fancybox-buttons.css" />
-	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.4/helpers/jquery.fancybox-thumbs.css" />
+	<link rel="stylesheet" href="reset-min.css">
+	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.4/jquery.fancybox.css">
+	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.4/helpers/jquery.fancybox-buttons.css">
+	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.4/helpers/jquery.fancybox-thumbs.css">
 	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Gudea:700|Open+Sans|Libre+Baskerville:700">
-	<link rel="stylesheet" href="stylesheet.css" />
+	<link rel="stylesheet" href="stylesheet.css">
 
 	<!-- JavaScript -->
 	<script src="//cdnjs.cloudflare.com/ajax/libs/headjs/0.99/head.min.js"></script>
 
 	<!-- Allgemeiner Kram -->
 	<meta name="viewport" content="width=745">
-	<meta http-equiv="X-UA-Compatible" content="IE=10" />
+	<meta http-equiv="X-UA-Compatible" content="IE=10">
 	<meta http-equiv="content-language" content="de-de">
 	<meta name="description" content="Gelegen in einer ruhigen Wohnsiedlung, knapp 2 km vom Stadtzentrum Lingen entfernt">
 
@@ -27,11 +26,11 @@
 	<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
 	<!-- OpenGraph -->
-	<meta property="og:title" content="Ferienwohnung &quot;Unter Eichen&quot;"/>
-	<meta property="og:type" content="hotel"/>
-	<meta property="og:url" content="http://fewo-unter-eichen.de/start/"/>
-	<meta property="og:image" content="http://fewo-unter-eichen.de/fileadmin/templates/images/eingang.jpg"/>
-	<meta property="og:description" content="Gelegen in einer ruhigen Wohnsiedlung, knapp 2 km vom Stadtzentrum entfernt, befindet sich in einem seperaten Anbau einer restaurierten Hofstelle mit altem Baumbestand und großzügiger Gartenanlage die Ferienwohnung &quot;Unter Eichen&quot;"/>
+	<meta property="og:title" content="Ferienwohnung &quot;Unter Eichen&quot;">
+	<meta property="og:type" content="hotel">
+	<meta property="og:url" content="http://fewo-unter-eichen.de/start/">
+	<meta property="og:image" content="http://fewo-unter-eichen.de/fileadmin/templates/images/eingang.jpg">
+	<meta property="og:description" content="Gelegen in einer ruhigen Wohnsiedlung, knapp 2 km vom Stadtzentrum entfernt, befindet sich in einem seperaten Anbau einer restaurierten Hofstelle mit altem Baumbestand und großzügiger Gartenanlage die Ferienwohnung &quot;Unter Eichen&quot;">
 </head>
 <body>
 	<h1 id="title"><a href="/">Ferienwohnung &#34;Unter Eichen&#34; in Lingen &#9733;&#9733;&#9733;</a></h1>
