--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
 	<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
 	<!-- OpenGraph -->
-	<meta property="og:title" content="Ferienwohnung &quot;Unter Eichen&quot;">
-	<meta property="og:type" content="hotel">
+	<meta property="og:title" content="Ferienwohnung &quot;Unter Eichen&quot; in Lingen">
+	<meta property="og:type" content="website">
+	<meta property="og:locale" content="de_DE">
 	<meta property="og:url" content="http://fewo-unter-eichen.de/start/">
 	<meta property="og:image" content="http://fewo-unter-eichen.de/fileadmin/templates/images/eingang.jpg">
 	<meta property="og:description" content="Gelegen in einer ruhigen Wohnsiedlung, knapp 2 km vom Stadtzentrum entfernt, befindet sich in einem seperaten Anbau einer restaurierten Hofstelle mit altem Baumbestand und großzügiger Gartenanlage die Ferienwohnung &quot;Unter Eichen&quot;">
@@ -37,7 +38,7 @@
 
 	<div id="container">
 		<div id="description">
-			<img src="images/eingang.jpg" alt="" width="230px" height="172px">
+			<img src="images/eingang.jpg" alt="" width="230" height="172">
 			<span>Gelegen in einer ruhigen Wohnsiedlung, knapp 2 km vom Stadtzentrum Lingen entfernt, befindet sich in einem seperaten Anbau einer restaurierten Hofstelle mit altem Baumbestand und großzügiger Gartenanlage die Ferienwohnung "Unter Eichen"</span>
 		</div>
 		<div id="inner_container">
