Tabelle im Democontent

--- a/index.html
+++ b/index.html
@@ -63,6 +63,17 @@
 					<li>Quisque tristique metus in eleifend pellentesque.</li>
 					<li>Proin nec augue sed nisl imperdiet bibendum.</li>
 				</ul>
+				<table class="contenttable">
+					<tbody>
+						<tr><td>Wohnbereich:</td><td>Sitzecke mit Couch mit Ausziehmöglichkeit, TV</td></tr>
+						<tr><td>Schlafnische:</td><td>Franz. Bett 1.40m x 2.00m &nbsp; &nbsp;</td></tr>
+						<tr><td>Schreibecke:</td><td>Schreibtisch</td></tr>
+						<tr><td>Küchenzeile:</td><td>Cerankochfeld mit Abzugshaube,&nbsp;Mikrowelle mit Heißluftfunktion (Backen, Braten), Kühlschrank, Kaffeemaschine, Wasserkocher, Eierkocher, ...</td></tr>
+						<tr><td>Glaskubus:</td><td>kleine Loggia – 2,42 qm²</td></tr>
+						<tr><td>Bad:</td><td>Wanne mit Duschbrause, Fön</td></tr>
+						<tr><td>Flur:</td><td>Garderobe, Waschmaschine</td></tr>
+					</tbody>
+				</table>
 			</div>
 		</div>
 		<div style="clear: both;">&nbsp;</div>
