PostalAddress = itemprop location

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 		</div>
 		<div style="clear: both;">&nbsp;</div>
 
-		<div id="footer" itemscope itemtype="http://schema.org/PostalAddress">
+		<div id="footer" itemprop="location" itemscope itemtype="http://schema.org/PostalAddress">
 			<div class="spacer"></div>
 			<span itemprop="name">Ferienwohnung "Unter Eichen"</span>,
 			<span itemprop="streetAddress">Am Strootbach 7a</span>,
