Ähm ja, der Link geht so natürlich nich...

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 			<span itemprop="streetAddress">Am Strootbach 7a</span>,
 			<span itemprop="postalCode">49809</span> <span itemprop="addressLocality">Lingen</span>
 			|
-			<a href="impressum">Impressum</a>
+			<a href="/impressum">Impressum</a>
 		</div>
 	</div>
 
