Hmpf, Typo3 macht das da weg...

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 			<div class="spacer"></div>
 			<span itemprop="name">Ferienwohnung "Unter Eichen"</span>,
 			<span itemprop="streetAddress">Am Strootbach 7a</span>,
-			<span itemprop="postalCode">49809</span> <span itemprop="addressLocality">Lingen</span>
+			<span itemprop="postalCode">49809</span>&nbsp;<span itemprop="addressLocality">Lingen</span>
 			|
 			<a href="/impressum">Impressum</a>
 		</div>
