--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 		<meta itemprop="longitude" content="7.337637" />
 	</div>
 
+	<script src="js/head.core.min.js"></script>
 	<script src="js/jquery-1.10.1.min.js"></script>
 	<script src="js/fancybox/jquery.fancybox.pack.js"></script>
 	<script src="js/fancybox/helpers/jquery.fancybox-buttons.js"></script>
