Minified assets, fixed fonts

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 	<title>Ferienwohnung "Unter Eichen" in Lingen</title>
 
 	<!-- Stylesheet -->
-	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Gudea:700|Open+Sans|Libre+Baskerville:700">
-	<link rel="stylesheet" href="js/fancybox/jquery.fancybox.css">
-	<link rel="stylesheet" href="js/fancybox/helpers/jquery.fancybox-buttons.css">
-	<link rel="stylesheet" href="js/fancybox/helpers/jquery.fancybox-thumbs.css">
-	<link rel="stylesheet" href="css/stylesheet.css">
+	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:400,700|Libre+Baskerville:400,700">
+	<link rel="stylesheet" href="js/fancybox/jquery.fancybox.min.css">
+	<link rel="stylesheet" href="js/fancybox/helpers/jquery.fancybox-buttons.min.css">
+	<link rel="stylesheet" href="js/fancybox/helpers/jquery.fancybox-thumbs.min.css">
+	<link rel="stylesheet" href="css/stylesheet.min.css">
 
 	<!-- Allgemeiner Kram -->
 	<meta name="viewport" content="width=745">
@@ -82,6 +82,8 @@
 			<span itemprop="postalCode">49809</span>&nbsp;<span itemprop="addressLocality">Lingen</span>
 			|
 			<a href="/impressum">Impressum</a>
+			|
+			<a href="/haftungsausschluss-datenschutz">Haftungsausschluss &amp; Datenschutz</a>
 		</div>
 	</div>
 
@@ -91,10 +93,10 @@
 	</div>
 
 	<script src="js/head.core.min.js"></script>
-	<script src="js/jquery-1.10.1.min.js"></script>
+	<script src="js/jquery-1.11.0.min.js"></script>
 	<script src="js/fancybox/jquery.fancybox.pack.js"></script>
-	<script src="js/fancybox/helpers/jquery.fancybox-buttons.js"></script>
-	<script src="js/fancybox/helpers/jquery.fancybox-thumbs.js"></script>
+	<script src="js/fancybox/helpers/jquery.fancybox-buttons.min.js"></script>
+	<script src="js/fancybox/helpers/jquery.fancybox-thumbs.min.js"></script>
 	<script>
 		var _gaq = _gaq || [];
 		_gaq.push(['_setAccount', 'UA-36080374-1']);
