Move tracking stuff to <head> as recommended by Google

--- a/index.html
+++ b/index.html
@@ -28,6 +28,32 @@
 	<meta property="og:url" content="http://fewo-unter-eichen.de/start/">
 	<meta property="og:image" content="http://fewo-unter-eichen.de/fileadmin/templates/images/eingang.jpg">
 	<meta property="og:description" content="Gelegen in einer ruhigen Wohnsiedlung, knapp 2 km vom Stadtzentrum entfernt, befindet sich in einem seperaten Anbau einer restaurierten Hofstelle mit altem Baumbestand und großzügiger Gartenanlage die Ferienwohnung &quot;Unter Eichen&quot;">
+
+	<!-- Google Analytics -->
+	<script>
+		var _gaq = _gaq || [];
+		_gaq.push(['_setAccount', 'UA-36080374-1']);
+		_gaq.push(['_gat._anonymizeIp']);
+		_gaq.push(['_trackPageview']);
+
+		(function() {
+			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+		})();
+
+		var _paq = _paq || [];
+		_paq.push(["trackPageView"]);
+		_paq.push(["enableLinkTracking"]);
+
+		(function() {
+			var u=(("https:" == document.location.protocol) ? "https" : "http") + "://piwik.olle-orks.org/";
+			_paq.push(["setTrackerUrl", u+"piwik.php"]);
+			_paq.push(["setSiteId", "5"]);
+			var d=document, g=d.createElement("script"), s=d.getElementsByTagName("script")[0]; g.type="text/javascript";
+			g.defer=true; g.async=true; g.src=u+"piwik.js"; s.parentNode.insertBefore(g,s);
+		})();
+	</script>
 </head>
 <body itemscope itemtype="http://schema.org/Hotel">
 	<h1 id="title" itemprop="name"><a href="/">Ferienwohnung &#34;Unter Eichen&#34; in Lingen &#9733;&#9733;&#9733;</a></h1>
@@ -98,29 +124,6 @@
 	<script src="js/fancybox/helpers/jquery.fancybox-buttons.min.js"></script>
 	<script src="js/fancybox/helpers/jquery.fancybox-thumbs.min.js"></script>
 	<script>
-		var _gaq = _gaq || [];
-		_gaq.push(['_setAccount', 'UA-36080374-1']);
-		_gaq.push(['_gat._anonymizeIp']);
-		_gaq.push(['_trackPageview']);
-
-		(function() {
-			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-		})();
-
-		var _paq = _paq || [];
-		_paq.push(["trackPageView"]);
-		_paq.push(["enableLinkTracking"]);
-
-		(function() {
-			var u=(("https:" == document.location.protocol) ? "https" : "http") + "://piwik.olle-orks.org/";
-			_paq.push(["setTrackerUrl", u+"piwik.php"]);
-			_paq.push(["setSiteId", "5"]);
-			var d=document, g=d.createElement("script"), s=d.getElementsByTagName("script")[0]; g.type="text/javascript";
-			g.defer=true; g.async=true; g.src=u+"piwik.js"; s.parentNode.insertBefore(g,s);
-		})();
-
 		if (window.location.href.match(/\/studio\//))
 		{
 			$(document).ready(function() {
