Add alt-Attribute to description image

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 	<div id="container">
 		<div id="description">
-			<img itemprop="image" src="images/eingang.jpg" alt="" width="230" height="172">
+			<img itemprop="image" src="images/eingang.jpg" alt="Eingang der Ferienwohnung" width="230" height="172">
 			<span itemprop="description">Gelegen in einer ruhigen Wohnsiedlung, knapp 2 km vom Stadtzentrum Lingen entfernt, befindet sich in einem seperaten Anbau einer restaurierten Hofstelle mit altem Baumbestand und großzügiger Gartenanlage die Ferienwohnung "Unter Eichen"</span>
 		</div>
 		<div id="inner_container">
